--- a/app/src/main/res/layout/custom_dialog_add_person.xml
+++ b/app/src/main/res/layout/custom_dialog_add_person.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/_300sdp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/_16sdp"
     android:orientation="vertical">
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:text="CANCEL"
             android:textSize="@dimen/_12sdp"
+            android:layout_marginRight="@dimen/_16sdp"
             android:textColor="@color/colorSecondaryDark"/>
 
         <TextView
@@ -51,7 +52,7 @@
             android:layout_height="wrap_content"
             android:text="OK"
             android:textSize="@dimen/_12sdp"
-            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_5sdp"
             android:textColor="@color/colorSecondaryDark"/>
 
     </LinearLayout>
