--- a/app/src/main/res/layout/card_add_person.xml
+++ b/app/src/main/res/layout/card_add_person.xml
@@ -36,6 +36,7 @@
         android:id="@+id/menuIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/_5sdp"
         android:src="@drawable/ic_menu_black_24dp"
         android:layout_gravity="center"/>
 
