--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -4,12 +4,17 @@
     android:layout_height="wrap_content"
     android:background="@color/colorWhite"
     android:gravity="center"
-    android:layout_margin="@dimen/_5sdp"
+    android:id="@+id/tripLinearLayout"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginTop="8dp"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/tripImageIV"
-        android:layout_width="@dimen/_100sdp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_width="fill_parent"
         android:layout_height="@dimen/_80sdp"
         android:src="@drawable/trip"/>
 
@@ -18,27 +23,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Manali"
-        android:textAlignment="center"
+        android:layout_marginLeft="@dimen/_2sdp"
         android:textColor="@color/colorBlack"
-        android:textSize="@dimen/_16sdp"
+        android:textSize="@dimen/_11sdp"
         android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/dateTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_2sdp"
         android:text="12-Feb-2020"
-        android:textAlignment="center"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_9sdp"
         />
 
     <TextView
         android:id="@+id/rsTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_2sdp"
         android:text="₹ 0"
-        android:textAlignment="center"
-        android:textSize="@dimen/_12sdp"/>
+        android:textSize="@dimen/_9sdp"/>
 
 
 </LinearLayout>
