--- a/app/src/main/res/layout/activity_trip_data_add.xml
+++ b/app/src/main/res/layout/activity_trip_data_add.xml
@@ -4,150 +4,147 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorBlackGround"
+    android:orientation="vertical"
     android:padding="@dimen/_12sdp"
     tools:context=".TripDataAdd">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/_10sdp"
-        android:orientation="vertical"
-        android:background="@color/colorWhite">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Trip Name"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/_16sdp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/nameTripET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:lines="1"
-            android:hint="Enter trip name"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Description"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/_16sdp"
-            android:textStyle="bold"/>
-
-        <EditText
-            android:id="@+id/descriptionET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:lines="1"
-            android:hint="Enter description (optional)"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:padding="@dimen/_10sdp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Trip Name"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/nameTripET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter trip name"
+                android:inputType="text"
+                android:lines="1" />
+
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Date"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/_16sdp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/dateTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="12-Feb-2020"
-                    android:textSize="@dimen/_12sdp" />
-            </LinearLayout>
+                android:text="Description"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/_12sdp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/descriptionET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter description (optional)"
+                android:inputType="text"
+                android:lines="1" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
-                android:layout_gravity="center">
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Date"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_12sdp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/dateTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="12-Feb-2020"
+                        android:textSize="@dimen/_12sdp" />
+                </LinearLayout>
+
                 <ImageView
                     android:id="@+id/calenderDialoImageView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_date_range_black_24dp"
-                    />
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_date_range_black_24dp" />
             </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_12sdp"
-        android:orientation="vertical"
-        android:background="@color/colorWhite">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Person Details"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/_16sdp"
-                android:textStyle="bold"/>
+            android:layout_marginTop="@dimen/_12sdp"
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:padding="@dimen/_10sdp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
-                android:layout_gravity="center">
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Person Details"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="@dimen/_12sdp"
+                    android:textStyle="bold" />
+
+
                 <ImageView
                     android:id="@+id/addPersonImageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_add_24dp"/>
+                    android:src="@drawable/ic_add_24dp" />
+
+
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/colorBlack" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewPerson"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
-        <View
+        <Button
+            android:id="@+id/saveTripBTN"
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/colorBlack"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewPerson"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/saveTripBTN"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="save trip"
-        android:textSize="@dimen/_12sdp"
-        android:layout_marginTop="@dimen/_12sdp"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/button_bg"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_12sdp"
+            android:background="@drawable/button_bg"
+            android:text="save trip"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/_12sdp" />
     </LinearLayout>
 
 </ScrollView>
